--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "game-coder",
-    "slug": "game-coder",
+    "name": "newtaskapp",
+    "slug": "newtaskapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
