--- a/app.json
+++ b/app.json
@@ -1,9 +1,8 @@
 {
   "expo": {
-    "name": "newtaskapp",
-    "slug": "newtaskapp",
+    "name": "cardnumbergame",
+    "slug": "cardnumbergame",
     "version": "1.0.0",
-    "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
