--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "game-coder",
+  "name": "cardnumbergame",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -9,13 +9,20 @@
   },
   "dependencies": {
     "expo": "~47.0.12",
+    "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-awesome-alerts": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "eslint": "^8.32.0",
+    "eslint-config-universe": "^11.1.1",
+    "prettier": "^2.8.3"
+  },
+  "eslintConfig": {
+    "extends": "universe/native"
   },
   "private": true
 }
