--- a/app.json
+++ b/app.json
@@ -1,8 +1,9 @@
 {
   "expo": {
-    "name": "cardnumbergame",
-    "slug": "cardnumbergame",
+    "name": "breadshopapp",
+    "slug": "breadshopapp",
     "version": "1.0.0",
+    "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
