--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "breadshopapp",
-    "slug": "breadshopapp",
+    "name": "realnewlocationapp",
+    "slug": "realnewlocationapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
