--- a/package.json
+++ b/package.json
@@ -1,31 +1,39 @@
 {
-  "name": "breadshopapp",
+  "name": "realnewlocationapp",
   "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint --ext .js,.jsx src",
+    "lint:fix": "eslint --ext .js,.jsx src --fix",
+    "prettier": "npx prettier --write 'src/**/*.{js,jsx}' --check",
+    "prettier:fix": "npm run prettier -- --write",
+    "format": "npm run lint:fix && npm run prettier:fix"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.5.4",
-    "@react-navigation/native": "^6.1.2",
-    "@react-navigation/native-stack": "^6.9.8",
-    "expo": "~47.0.12",
-    "expo-font": "~11.0.1",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
+    "@reduxjs/toolkit": "^1.8.5",
+    "expo": "~46.0.9",
+    "expo-image-picker": "~13.3.1",
+    "expo-location": "~14.3.0",
+    "expo-permissions": "~13.2.0",
+    "expo-status-bar": "~1.4.0",
+    "react": "18.0.0",
+    "react-native": "0.69.5",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-redux": "^8.0.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "eslint": "^8.33.0",
-    "eslint-config-universe": "^11.1.1",
-    "prettier": "^2.8.3"
+    "eslint": "^8.23.0",
+    "eslint-config-universe": "^11.1.0",
+    "prettier": "^2.7.1"
   },
   "eslintConfig": {
     "extends": "universe/native"
